--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,9 @@ bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 bind -n S-right select-pane -R
 
+bind -n C-S-right next-window
+bind -n C-S-left previous-window
+
 # Use vim keybindings in copy mode $ brew install reattach-to-user-namespace
 #setw -g mode-keys vi
 
