refactor: add release check in dein

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -74,6 +74,9 @@ repo = 'neoclide/coc.nvim'
 rev = 'release'
 on_i = 1
 merged = '0'
+build = '''
+  git checkout release
+'''
 hook_add = '''
 set hidden
 set nobackup
